style(frontend): 格式化代码并添加文档注释
- 统一 Vue 组件模板中的属性顺序和换行格式
- 为 Java 类添加 Javadoc 注释和作者信息
- 格式化 TypeScript 函数参数和变量声明的缩进
- 简化 Mockito 导入语句并优化测试代码结构
- 重构条件判断逻辑以提高代码可读性
- 调整前端 API 模块中的接口定义格式